--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Slab:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family='Montserrat', sans-serif;&family=Roboto+Slab:wght@300&display=swap');
 
 * {
   padding: 0;
@@ -8,7 +8,7 @@
   scroll-behavior: smooth;
 }
 
-body{
+body {
   background-color: #fafafa;
 }
 
@@ -45,7 +45,7 @@ body{
   width: 25rem;
   height: 2.313rem;
   margin: 0.375rem 2.938rem 0.125rem 0;
-  font-family: Montserrat;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1.875rem;
   font-weight: bold;
   font-stretch: normal;
@@ -55,14 +55,14 @@ body{
   color: #0290ff;
 }
 
-.header__nav ul{
+.header__nav ul {
   display: flex;
   flex-direction: row;
   list-style: none;
   text-decoration: none;
 }
 
-.header__nav ul li{
+.header__nav ul li {
   list-style: none;
 }
 
@@ -71,7 +71,7 @@ body{
   height: 1rem;
   margin: 1.125rem 2.563rem 0.688rem 0;
   opacity: 0.5;
-  font-family: Montserrat;
+  font-family: 'Montserrat', sans-serif;
   font-size: 0.813rem;
   font-weight: normal;
   font-stretch: normal;
@@ -88,6 +88,11 @@ body{
   color: black;
 }
 
+.navCat > a {
+  text-decoration: none;
+  color: black;
+}
+
 .navBooks > a:hover {
   color: #0290ff;
 }
@@ -97,7 +102,7 @@ body{
   height: 1rem;
   margin: 1.125rem 41.5rem 0.688rem 2.563rem;
   opacity: 0.5;
-  font-family: Montserrat;
+  font-family: 'Montserrat', sans-serif;
   font-size: 0.813rem;
   font-weight: normal;
   font-stretch: normal;
@@ -109,16 +114,11 @@ body{
   text-decoration: none;
 }
 
-.navCat > a {
-  text-decoration: none;
-  color: black;
-}
-
 .navCat > a:hover {
   color: #0290ff;
 }
 
-.form__section{
+.form__section {
   width: 75%;
   padding: 2rem 9.188rem 1.625rem 1.688rem;
   margin-left: 4.45rem;
@@ -127,21 +127,20 @@ body{
   margin-bottom: 6rem;
 }
 
-.section__title{
+.section__title {
   color: #888;
   font-weight: bolder;
   margin: 10px 0;
 }
 
-.book__form{
+.book__form {
   width: 100%;
   display: flex;
   flex-direction: row;
 }
 
-.book__form-title{
+.book__form-title {
   outline: none;
-  margin-right: 20px;
   width: 41.5rem;
   height: 2.813rem;
   margin: 1.188rem 2.125rem 0 0;
@@ -151,9 +150,8 @@ body{
   background-color: #fff;
 }
 
-.book__form-author{
+.book__form-author {
   outline: none;
-  margin-right: 20px;
   width: 17.813rem;
   height: 2.813rem;
   margin: 1.188rem 2.125rem 0;
@@ -178,7 +176,7 @@ input::placeholder {
   padding: 0.801rem 1.188rem 0.886rem 1.375rem;
   border-radius: 3px;
   background-color: #0290ff;
-  font-family: RobotoSlab;
+  font-family: 'Roboto Slab', serif;
   font-size: 0.813rem;
   font-weight: bold;
   font-stretch: normal;
@@ -204,11 +202,6 @@ button:hover {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #fff;
-  border: 1px solid #d3d3d3;
-  border-radius: 5px;
-  padding: 2rem;
-  margin-bottom: 1rem;
   font-family: 'Roboto Slab', serif;
   width: 75rem;
   height: 10.625rem;
@@ -219,30 +212,29 @@ button:hover {
   background-color: #fff;
 }
 
-.book-header{
+.book-header {
   padding-right: 16rem;
 }
 
-.book-header__category{
+.book-header__category {
   font-family: 'Montserrat', sans-serif;
-  font-size: 0.875rem;
   color: #121212;
   font-weight: bold;
   height: 1.125rem;
   opacity: 50%;
 }
 
-.book-header__title{
+.book-header__title {
   font-size: 1.375rem;
   font-weight: bold;
   margin: 0;
 }
 
-.book-header__author{
+.book-header__author {
   width: 6.688rem;
   height: 1.188rem;
   margin: 0.25rem 0 0;
-  font-family: RobotoSlab;
+  font-family: 'Roboto Slab', serif;
   font-size: 0.875rem;
   font-weight: 300;
   font-stretch: normal;
@@ -272,7 +264,7 @@ button:hover {
   transition: linear 0.6s;
 }
 
-.book-header__buttons{
+.book-header__buttons {
   margin-top: 10px;
 }
 
@@ -282,7 +274,7 @@ button:hover {
   border-radius: 3px;
   color: #fff;
   font-size: 0.8rem;
-  font-family: RobotoSlab;
+  font-family: 'Roboto Slab', serif;
   letter-spacing: 0.5px;
   font-weight: 300;
   text-align: center;
@@ -295,7 +287,6 @@ button:hover {
   width: 5.625rem;
   height: 5.62rem;
   padding: 0.62rem 0.625rem 0.75rem 0.75rem;
-  align-items: right;
 }
 
 .book-circle {
@@ -353,7 +344,7 @@ button:hover {
   border-radius: 3px;
   color: #fff;
   font-size: 0.8rem;
-  font-family: RobotoSlab;
+  font-family: 'Roboto Slab', serif;
   letter-spacing: 0.5px;
   font-weight: 300;
   text-align: center;
